test/regress/coverage-bal-assert-null-expr.test
; Coverage for textual_xacts.cc balance assertion evaluates to null

2024/01/01 Opening
    Assets:Checking    $1000
    Equity:Opening

2024/01/02 Test
    Expenses:Food    $10.00 = ()
    Assets:Checking

test reg -> 1
__ERROR__
While parsing file "$FILE", line 8:
While parsing posting:
  Expenses:Food    $10.00 = ()
                            ^^
Error: Balance assertion must evaluate to a constant
end test
